// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should contain correct values for fontFamily 1`] = `"'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif"`;

exports[`should contain correct values for fontHyphenationStyle 1`] = `
{
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for fontLineHeight 1`] = `"calc(6px + 2.125ex)"`;

exports[`should contain correct values for fontSize 1`] = `
{
  "display": {
    "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
    "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
    "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
  },
  "heading": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  },
  "text": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
    "xxSmall": ".75rem",
  },
}
`;

exports[`should contain correct values for fontSizeDisplay 1`] = `
{
  "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
  "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
  "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
}
`;

exports[`should contain correct values for fontSizeDisplayLarge 1`] = `"clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)"`;

exports[`should contain correct values for fontSizeDisplayMedium 1`] = `"clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)"`;

exports[`should contain correct values for fontSizeDisplaySmall 1`] = `"clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)"`;

exports[`should contain correct values for fontSizeHeading 1`] = `
{
  "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "small": "1rem",
  "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
}
`;

exports[`should contain correct values for fontSizeHeadingLarge 1`] = `"clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)"`;

exports[`should contain correct values for fontSizeHeadingMedium 1`] = `"clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)"`;

exports[`should contain correct values for fontSizeHeadingSmall 1`] = `"1rem"`;

exports[`should contain correct values for fontSizeHeadingXLarge 1`] = `"clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)"`;

exports[`should contain correct values for fontSizeHeadingXXLarge 1`] = `"clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)"`;

exports[`should contain correct values for fontSizeText 1`] = `
{
  "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "small": "1rem",
  "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
  "xxSmall": ".75rem",
}
`;

exports[`should contain correct values for fontSizeTextLarge 1`] = `"clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)"`;

exports[`should contain correct values for fontSizeTextMedium 1`] = `"clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)"`;

exports[`should contain correct values for fontSizeTextSmall 1`] = `"1rem"`;

exports[`should contain correct values for fontSizeTextXLarge 1`] = `"clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)"`;

exports[`should contain correct values for fontSizeTextXSmall 1`] = `"clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)"`;

exports[`should contain correct values for fontSizeTextXXSmall 1`] = `".75rem"`;

exports[`should contain correct values for fontStyle 1`] = `
{
  "italic": "italic",
  "normal": "normal",
}
`;

exports[`should contain correct values for fontStyleItalic 1`] = `"italic"`;

exports[`should contain correct values for fontStyleNormal 1`] = `"normal"`;

exports[`should contain correct values for fontVariant 1`] = `"normal"`;

exports[`should contain correct values for fontWeight 1`] = `
{
  "bold": 700,
  "regular": 400,
  "semiBold": 600,
}
`;

exports[`should contain correct values for fontWeightBold 1`] = `700`;

exports[`should contain correct values for fontWeightRegular 1`] = `400`;

exports[`should contain correct values for fontWeightSemiBold 1`] = `600`;
